# hexagonal-architecture-fastapi-back

./: .env.example  .gitignore  ANALISIS_Y_MEJORA.md  Dockerfile  Makefile  README.md  STYLE_GUIDE.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
app/: main.py
app/application/: container.py  fast_api.py  handler.py  logging_config.py  settings.py
app/domain/gateway/: persistence_gateway.py  user_data_gateway.py
app/domain/model/: user.py
app/domain/model/util/: exceptions.py  response_codes.py
app/domain/usecase/: auth_usecase.py  user_usecase.py
app/domain/usecase/util/: jwt.py  security.py
app/infrastructure/driven_adapter/persistence/config/: database.py  settings.py
app/infrastructure/driven_adapter/persistence/entity/: user_entity.py
app/infrastructure/driven_adapter/persistence/mapper/: user_mapper.py
app/infrastructure/driven_adapter/persistence/repository/: user_repository.py
app/infrastructure/driven_adapter/persistence/service/: persistence.py  presistence.py
app/infrastructure/driven_adapter/user_adapter/: user_data_gateway_impl.py
app/infrastructure/entry_point/controller/: auth_controller.py
app/infrastructure/entry_point/dto/: response_dto.py  user_dto.py
app/infrastructure/entry_point/handler/: auth.py  auth_handler.py
app/infrastructure/entry_point/mapper/: user_mapper.py
app/infrastructure/entry_point/utils/: api_response.py  exception_handler.py
app/infrastructure/entry_point/validator/: validator.py
tests/: conftest.py
tests/unit/domain/usecase/: test_user_usecase.py
(+3 files in other folders)
